Tippfehler in Sektion Symmetrische Gruppe entfernt

--- a/skript.tex
+++ b/skript.tex
@@ -1115,10 +1115,10 @@ wobei $i: N\to G, n\mapsto (n,e_H), p:G\to H, (n,h)\mapsto h$ ist $j:H\to G, h\m
 		&= (a_{2j-1}a_{2j}b_{2j-1})(a_{2j-1}a_{2j}b_{2j})
 	\end{align*}
 	ein Produkt von 3-Zyklen.
-	Wenn es ein gemeinsames Element gibt, also \(|\{a_{2j-1}b_{2j-1}\}\cap\{a_{2j}b_{2j}\}| = 1\) ist, kann mit \((ab) = (ba)\) oBdA $b_{2j-1}=a_{2j}$ angenommen werden und wir haben über $(a_{2_{j-1}}a_{2_j})(a_{2_j}b_{2_j})=(a_{2_{j-1}}a_{2j}b_{2j})$ einen 3-Zyklus.
-	Für \(\{a_{2j-1}b_{2j-1}\} = \{a_{2j}b_{2j}\}\) ist schließlich \((a_{2j-1}b_{2j-1})(a_{2j}b_{2j}) = \id\).
+	Wenn es ein gemeinsames Element gibt, also \(|\{a_{2j-1},b_{2j-1}\} \cap \{a_{2j},b_{2j}\}| = 1\) ist, kann mit \((ab) = (ba)\) oBdA $b_{2j-1}=a_{2j}$ angenommen werden und wir haben über $(a_{2_{j-1}}a_{2_j})(a_{2_j}b_{2_j})=(a_{2_{j-1}}a_{2j}b_{2j})$ einen 3-Zyklus.
+	Für \(\{a_{2j-1},b_{2j-1}\} = \{a_{2j},b_{2j}\}\) ist schließlich \((a_{2j-1}b_{2j-1})(a_{2j}b_{2j}) = \id\).
 
-	Somit kann \((a_{2j-1}b_{2j-1})(a_{2j}b_{2j})\) als Produkt von 3-Zyklen geschrieben werden und auch \(\sigma = \prod_{j = 1}^m (a_{2j-1}b_{2j-1})(a_{2j}b_{2j})\) ist ein Produkt von 3-Zykeln.
+	Somit kann \((a_{2j-1}b_{2j-1})(a_{2j}b_{2j})\) als Produkt von 3-Zyklen geschrieben werden und auch \(\sigma = \prod_{j = 1}^m (a_{2j-1}b_{2j-1})(a_{2j}b_{2j})\) ist ein Produkt von 3-Zyklen.
 \end{proof}
 	
 \begin{ex}
@@ -1474,7 +1474,7 @@ Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 		\[ s \divides 6,\; s\equiv 1(5)\Rightarrow s=6.\]
 	Also gibt es 6 verschiedene 5-Sylowuntergruppen, jede davon hat Ordnung $5$. Da die 5-Sylowuntergruppen zyklisch sind, haben sie paarweise nur einen trivialen Schnitt. Damit enthalten die 5-Sylowuntergruppen zusammen $6\cdot 4 =24$ Elemente und das neutrale Element. Analog gilt für $t$
 		\[ t \divides 10,\; t\equiv 1(3) \Rightarrow t=10.\]
-	Damit enthalten die 3-Sylowuntergruppen $10\cdot 2=20$ Elemente und das neutrale Element. Die nichttrivialen Elemente der 3-Sylowgruppen sind von denen der 5-Sylowgruppen verschieden, denn das einzige Element dessen Ordnung sowohl 5 als auch 3 teilt ist das neutrale.
+	Damit enthalten die 3-Sylowuntergruppen $10\cdot 2=20$ Elemente und das neutrale Element. Die nichttrivialen Elemente der 3-Sylowuntergruppen sind von denen der 5-Sylowuntergruppen verschieden, denn das einzige Element, dessen Ordnung sowohl 5 als auch 3 teilt, ist das neutrale.
 	
 	Aber: $20+24+1=45>30=\ord(G)$. Also kann $G$ nicht einfach sein.
 \end{proof}
